--- a/style.css
+++ b/style.css
@@ -247,8 +247,54 @@ margin-bottom: 1.5rem;
 }
 
 
+/* ************* */
+/* Meals Section */
+/* ************* */
 
-
+.meals-section
+{
+  margin-bottom: 9.6rem ;
+}
+        
+.meals-img
+{
+  width: 100%;
+}
+.meals
+{
+  box-shadow:0px 2.4rem .5rem rgba(128, 128, 128, 0.494);
+}
+.tag
+{
+  display: inline-block;
+ background-color: rgb(37, 186, 37);
+ padding: .4rem;
+ border-radius: 1.5rem ;
+ font-size: 1.4rem;
+ margin-bottom: 1.2rem;
+ font-weight: 600;
+}
+.meals-heading
+{
+ margin-bottom: 2rem;
+ letter-spacing: -1px;
+}
+.meals-description
+{
+  padding: 4rem;
+}
+.meals-list
+{
+  font-size: 1.8rem;
+ list-style: none;
+ display: flex;
+ flex-direction: column;
+ gap: 1.2rem;
+}
+.gap
+{
+  gap: 5rem;
+}
 
 /* ************* */
 /* Resuable class */
@@ -266,7 +312,7 @@ margin-bottom: 1.5rem;
 {
   display: grid;
   row-gap: 9.6rem;
-  column-gap: 2rem ;
+  /* column-gap: 2rem ; */
 }
 .grid--2--cols 
 {
