--- a/style.css
+++ b/style.css
@@ -22,8 +22,8 @@ body{
 
 
 .topheader{
-  position: sticky;
-  top: 0;
+  /* position: sticky;
+  top: 0; */
 display: flex;
 justify-content: space-between;
 align-items: center;
@@ -398,3 +398,8 @@ gap: 2rem;
   gap: 2rem;
   margin-bottom: 3rem;
 }
+
+
+
+
+
